# zynq7-sdr

./: README.md
AXi_Lite/: zynq_led.vhd
axi_lite/: template.c
axi_lite_master/: README.md  axi_lite_master.vhd
axi_lite_slave/: axi_lite_slave.vhd  template.c
axi_streaming/: axi_stream_top.mpd  axi_stream_top.vhd  axi_streaming.vhd  readme.md
gnuradio/: arm_cortex_a8_native.cmake  sourceme.gbs
gnuradio/examples/: fpga_to_file.py  fpga_wbfm.py
gnuradio/fpga-src/: CMakeLists.txt  install  install8192
gnuradio/fpga-src-1.0/: Install.sh
gnuradio/fpga-src-1.0/build_cross8192/: Makefile  cmake_uninstall.cmake
gnuradio/fpga-src-1.0/build_x86/: cmake_install.cmake
gnuradio/fpga-src-1.0/grc/: test1_dds_fpga.xml
gnuradio/fpga-src-1.0/lib/: CMakeLists.txt  dds_fpga_impl.cc  dds_fpga_impl.h  qa_test1.h  test_test1.cc
gnuradio/fpga-src-1.0/python/: CMakeLists.txt
gnuradio/fpga-src-1.0/swig/: CMakeLists.txt
gnuradio/fpga-src-1.1/build_cross/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  cmake_uninstall.cmake
gnuradio/fpga-src-1.1/build_cross8192/: install_manifest.txt
gnuradio/fpga-src-1.1/build_x86/: CMakeCache.txt
gnuradio/fpga-src-1.1/grc/: test1_dds_fpga.xml
gnuradio/fpga-src-1.1/lib/: .dds_fpga_impl.cc.swp  dds_fpga_impl.cc
gnuradio/fpga-src-block/: arm_cortex_a8_native.cmake
gnuradio/fpga-src-block/demos/: sx1255_16384_25.sh  sx1255_16384_50.sh  sx1255_8192_25.sh  sx1255_8192_50.sh  top_sx1255_16384_25_wbfm.py  top_sx1255_16384_50_wbfm.py  top_sx1255_8192_25_wbfm.py  top_sx1255_8192_50_wbfm.py
gnuradio/fpga-src/build_cross/: CMakeCache.txt  Makefile
gnuradio/fpga-src/build_cross8192/: CMakeCache.txt  cmake_install.cmake
gnuradio/fpga-src/build_x86/: CTestTestfile.cmake  Makefile  cmake_uninstall.cmake
gnuradio/fpga-src/docs/: README.test1
gnuradio/fpga-src/grc/: CMakeLists.txt
gnuradio/fpga-src/lib/: dds_fpga_impl.cc  dds_fpga_impl.h  qa_test1.cc  toto_impl.cc  toto_impl.h
gnuradio/wbfm_fpga_dma/: top_block.py
gnuradio/wbfm_qt_dma/: top_block_qt.py
gnuradio/wbfm_qt_polling/: top_block_qt.py
linux/fir-16/kernel/: Makefile  fir16_config.h  fir16_core.c
linux/fir-16/userspace/: fir16.h
linux/ram-iq/kernel/: .ram_board.ko.cmd  .ram_board.mod.o.cmd  .ram_board.o.cmd  Makefile  ram_board.c  ram_board.ko  ram_board.mod.c  ram_config.h  ram_core.ko
linux/ram-iq/userspace/: Makefile  ram.c
linux/sx1255/kernel/: Makefile  (+5 more)
src/xps-edk/: sx1255.ucf
(+284 files in other folders)
